--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://source.unsplash.com/1600x500/?tech,code,laptop" class="d-block w-100" alt="...">
+                <img src="1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>First slide label</h2>
                     <p>Some representative placeholder content for the first slide.</p>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://source.unsplash.com/1600x500/?code,laptop" class="d-block w-100" alt="...">
+                <img src="2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Second slide label</h2>
                     <p>Some representative placeholder content for the second slide.</p>
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://source.unsplash.com/1600x500/?tech,code" class="d-block w-100" alt="...">
+                <img src="3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Third slide label</h2>
                     <p>Some representative placeholder content for the third slide.</p>
