--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h2>First slide label</h2>
                     <p>Some representative placeholder content for the first slide.</p>
-                    <button type="button" class="btn btn-danger">Coding</button>
+                    <button type="button" class="btn btn-danger">Technology</button>
                     <button type="button" class="btn btn-primary">Web Development</button>
-                    <button type="button" class="btn btn-success">Gaming</button>
+                    <button type="button" class="btn btn-success">Tech Fun</button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -164,9 +164,9 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Second slide label</h2>
                     <p>Some representative placeholder content for the second slide.</p>
-                    <button type="button" class="btn btn-danger">Coding</button>
+                    <button type="button" class="btn btn-danger">Technology</button>
                     <button type="button" class="btn btn-primary">Web Development</button>
-                    <button type="button" class="btn btn-success">Gaming</button>
+                    <button type="button" class="btn btn-success">Tech fun</button>
                 </div>
             </div>
             <div class="carousel-item">
@@ -174,9 +174,9 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Third slide label</h2>
                     <p>Some representative placeholder content for the third slide.</p>
-                    <button type="button" class="btn btn-danger">Coding</button>
+                    <button type="button" class="btn btn-danger">Technology</button>
                     <button type="button" class="btn btn-primary">Web Development</button>
-                    <button type="button" class="btn btn-success">Gaming</button>
+                    <button type="button" class="btn btn-success">Tech Fun</button>
                 </div>
             </div>
         </div>
