--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
     <!-- Features Section -->
     <div class="container px-4 py-5 bg-secondary bg-opacity-10" id="icon-grid">
-        <h2 class="pb-2 border-bottom">Our Achivments</h2>
+        <h2 class="pb-2 border-bottom">Our Courses</h2>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
             <div class="col d-flex align-items-start">
@@ -383,8 +383,8 @@
                     <use xlink:href="#cpu-fill"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">Game Of Thrones</h4>
-                    <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    <h4 class="fw-bold mb-0">Android Development</h4>
+                    <p>The top rated onlne E-learing Android Development course</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -392,8 +392,8 @@
                     <use xlink:href="#cpu-fill"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">La Casa The Papel</h4>
-                    <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    <h4 class="fw-bold mb-0">Web Development</h4>
+                    <p>Web Development made easy for enroling in this course</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -401,7 +401,7 @@
                     <use xlink:href="#calendar3"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">Harry Potter</h4>
+                    <h4 class="fw-bold mb-0">Robotics</h4>
                     <p>Paragraph of text beneath the heading to explain the heading.</p>
                 </div>
             </div>
@@ -410,8 +410,8 @@
                     <use xlink:href="#home"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">The amazing Spider Man</h4>
-                    <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    <h4 class="fw-bold mb-0">Machine Learing</h4>
+                    <p>Full Mahine Learning is made easy for you </p>
                 </div>
             </div>
             <div class="col d-flex align-items-start">
@@ -419,7 +419,7 @@
                     <use xlink:href="#speedometer2"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">All of us are dead</h4>
+                    <h4 class="fw-bold mb-0">A.I.</h4>
                     <p>Paragraph of text beneath the heading to explain the heading.</p>
                 </div>
             </div>
@@ -428,7 +428,7 @@
                     <use xlink:href="#toggles2"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">Conjuring</h4>
+                    <h4 class="fw-bold mb-0">Deep Learning</h4>
                     <p>Paragraph of text beneath the heading to explain the heading.</p>
                 </div>
             </div>
@@ -437,7 +437,7 @@
                     <use xlink:href="#geo-fill"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">Octa-fx</h4>
+                    <h4 class="fw-bold mb-0">Python</h4>
                     <p>Paragraph of text beneath the heading to explain the heading.</p>
                 </div>
             </div>
@@ -446,7 +446,7 @@
                     <use xlink:href="#tools"></use>
                 </svg>
                 <div>
-                    <h4 class="fw-bold mb-0">Featured title</h4>
+                    <h4 class="fw-bold mb-0">C++/Java</h4>
                     <p>Paragraph of text beneath the heading to explain the heading.</p>
                 </div>
             </div>
