--- a/index.html
+++ b/index.html
@@ -201,12 +201,11 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static bg-secondary bg-opacity-25">
-                        <strong class="d-inline-block mb-2 text-primary">World</strong>
-                        <h3 class="mb-0">Featured post</h3>
+                        <strong class="d-inline-block mb-2 text-primary">Web</strong>
+                        <h3 class="mb-0">Web Development</h3>
                         <div class="mb-1 text-muted">Jan 12</div>
-                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                            lead-in to additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <p class="card-text mb-auto">This Web Deelopment course provoid that value so you can make a website of your creativity and the stand out your web-site.</p>
+                        <a href="#" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
@@ -220,11 +219,10 @@
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static bg-secondary bg-opacity-25">
                         <strong class="d-inline-block mb-2 text-success">Design</strong>
-                        <h3 class="mb-0">Post title</h3>
+                        <h3 class="mb-0">Android Development</h3>
                         <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                            additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <p class="mb-auto">This Android Deelopment course provoid that value so you can make a app of your creativity and the stand out your application.</p>
+                        <a href="#" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
@@ -240,12 +238,12 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static bg-secondary bg-opacity-25">
-                        <strong class="d-inline-block mb-2 text-danger">World</strong>
-                        <h3 class="mb-0">Featured post</h3>
+                        <strong class="d-inline-block mb-2 text-danger">A.I></strong>
+                        <h3 class="mb-0">Artificial Intelligence</h3>
                         <div class="mb-1 text-muted">mar 5</div>
                         <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
                             lead-in to additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <a href="#" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
@@ -258,12 +256,12 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static bg-secondary bg-opacity-25">
-                        <strong class="d-inline-block mb-2 text-warning">Design</strong>
+                        <strong class="d-inline-block mb-2 text-warning">Python</strong>
                         <h3 class="mb-0">Post title</h3>
                         <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
                             additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <a href="#" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
