--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static bg-secondary bg-opacity-25">
-                        <strong class="d-inline-block mb-2 text-danger">A.I></strong>
+                        <strong class="d-inline-block mb-2 text-danger">A.I.</strong>
                         <h3 class="mb-0">Artificial Intelligence</h3>
                         <div class="mb-1 text-muted">mar 5</div>
                         <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
@@ -257,7 +257,7 @@
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static bg-secondary bg-opacity-25">
                         <strong class="d-inline-block mb-2 text-warning">Python</strong>
-                        <h3 class="mb-0">Post title</h3>
+                        <h3 class="mb-0">Python Course</h3>
                         <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
                             additional content.</p>
