--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             <div class="carousel-item active">
                 <img src="1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>First slide label</h2>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h2>Code Forever</h2>
+                    <p>“Programmer: A machine that turns coffee into code.”</p>
                     <button type="button" class="btn btn-danger">Technology</button>
                     <button type="button" class="btn btn-primary">Web Development</button>
                     <button type="button" class="btn btn-success">Tech Fun</button>
