--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                             Topics
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="https://en.wikipedia.org/wiki/Technology" target="_blank">Technology</a></li>
+                            <li><a class="dropdown-item" href="https://en.wikipedia.org/wiki/Technology"
+                                    target="_blank">Technology</a></li>
                             <li><a class="dropdown-item" href="#">Web Development</a></li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -53,15 +54,89 @@
                     <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
                 <div class="mx-2">
-                    <button class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
-                    <button class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
+                    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+                    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
+                        Launch demo modal
+                    </button> -->
+                    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
                 </div>
             </div>
         </div>
     </nav>
 
+    <!-- Login Modal Prajwal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">Login to iCoder</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Sign-Up Modal Prajwal -->
+    <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signupModalLabel">Sign-Up to iCoder</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="form-group">
+                            <label for="cexampleInputPassword1">Confirm Password</label>
+                            <input type="password" class="form-control" id="cexampleInputPassword1">
+                        </div>
+
+                        <button type="submit" class="btn btn-primary my-2">Create Account</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Login Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
+    <!-- <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -96,11 +171,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- Sign Up Modal -->
-    <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel"
+    <!-- <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -136,7 +211,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Carousel Section -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -162,8 +237,8 @@
             <div class="carousel-item">
                 <img src="2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Second slide label</h2>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h2>Famous Quotes</h2>
+                    <p>“Remember that there is no code faster than no code.”</p>
                     <button type="button" class="btn btn-danger">Technology</button>
                     <button type="button" class="btn btn-primary">Web Development</button>
                     <button type="button" class="btn btn-success">Tech fun</button>
@@ -172,8 +247,8 @@
             <div class="carousel-item">
                 <img src="3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Third slide label</h2>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h2>Famous Quotes</h2>
+                    <p>“C programmers never die. They are just cast into void.”</p>
                     <button type="button" class="btn btn-danger">Technology</button>
                     <button type="button" class="btn btn-primary">Web Development</button>
                     <button type="button" class="btn btn-success">Tech Fun</button>
@@ -204,7 +279,8 @@
                         <strong class="d-inline-block mb-2 text-primary">Web</strong>
                         <h3 class="mb-0">Web Development</h3>
                         <div class="mb-1 text-muted">Jan 12</div>
-                        <p class="card-text mb-auto">This Web Deelopment course provoid that value so you can make a website of your creativity and the stand out your web-site.</p>
+                        <p class="card-text mb-auto">This Web Deelopment course provoid that value so you can make a
+                            website of your creativity and the stand out your web-site.</p>
                         <a href="#" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -221,7 +297,8 @@
                         <strong class="d-inline-block mb-2 text-success">Design</strong>
                         <h3 class="mb-0">Android Development</h3>
                         <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This Android Deelopment course provoid that value so you can make a app of your creativity and the stand out your application.</p>
+                        <p class="mb-auto">This Android Deelopment course provoid that value so you can make a app of
+                            your creativity and the stand out your application.</p>
                         <a href="#" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -281,19 +358,20 @@
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                       Benefits of E-Learning
+                        Benefits of E-Learning
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        E-learning Fully Adjusts to Your Needs. Online studying is designed to accommodate everyone's needs. ...
-                        Reduced Cost. 
-                        Remote Approach To Various Classes. 
-                        Transfer Credits & Commuting. 
-                        Instant Career Advancement. 
-                        Quick Delivery. 
-                        Scalability. 
+                        E-learning Fully Adjusts to Your Needs. Online studying is designed to accommodate everyone's
+                        needs. ...
+                        Reduced Cost.
+                        Remote Approach To Various Classes.
+                        Transfer Credits & Commuting.
+                        Instant Career Advancement.
+                        Quick Delivery.
+                        Scalability.
                         Consistency & Teacher Scarcity.
                     </div>
                 </div>
@@ -460,28 +538,28 @@
         <footer class="py-5">
             <div class="row">
                 <div class="col-2">
-                    <h5>Section</h5>
+                    <h5>Features</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">API</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Training</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Status</a></li>
                     </ul>
                 </div>
 
                 <div class="col-2">
-                    <h5>Section</h5>
+                    <h5>Recommend</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Shop</a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Security</a></li>
                     </ul>
                 </div>
 
                 <div class="col-2">
-                    <h5>Section</h5>
+                    <h5>More</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
                     </ul>
                 </div>
