enroll section done

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">This Android Deelopment course provoid that value so you can make a app of
                             your creativity and the stand out your application.</p>
-                        <a href="#" class="stretched-link">Enroll Now</a>
+                        <a href="/Website/enroll.html" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
