bug of all the enroll links are now fixed

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <div class="mb-1 text-muted">Jan 12</div>
                         <p class="card-text mb-auto">This Web Deelopment course provoid that value so you can make a
                             website of your creativity and the stand out your web-site.</p>
-                        <a href="#" class="stretched-link">Enroll Now</a>
+                        <a href="/Website/enroll.html" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
@@ -404,7 +404,7 @@
                         <div class="mb-1 text-muted">mar 5</div>
                         <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
                             lead-in to additional content.</p>
-                        <a href="#" class="stretched-link">Enroll Now</a>
+                        <a href="/Website/enroll.html" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
@@ -422,7 +422,7 @@
                         <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
                             additional content.</p>
-                        <a href="#" class="stretched-link">Enroll Now</a>
+                        <a href="/Website/enroll.html" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
