--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="carousel-item">
                 <img src="2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Famous Quotes</h2>
+                    <h2>Competitive Environment</h2>
                     <p>“Remember that there is no code faster than no code.”</p>
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal"
                         data-bs-target="#technologyModal">Technology</button>
@@ -251,9 +251,9 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="3.jpg" class="d-block w-100" alt="...">
+                <img src="4.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Famous Quotes</h2>
+                    <h2>Critical Thinking</h2>
                     <p>“C programmers never die. They are just cast into void.”</p>
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal"
                         data-bs-target="#technologyModal">Technology</button>
@@ -368,8 +368,10 @@
                         <a href="/Website/enroll.html" class="stretched-link">Enroll Now</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
+                        <!-- <img class="bd-placeholder-img" width="200" height="250"
+                            src="https://source.unsplash.com/200x250/?tech,laptop" alt=""> -->
                         <img class="bd-placeholder-img" width="200" height="250"
-                            src="https://source.unsplash.com/200x250/?tech,laptop" alt="">
+                            src="p3.jpg" alt="">
 
                     </div>
                 </div>
@@ -387,7 +389,7 @@
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
-                            src="https://source.unsplash.com/200x250/?tech,laptop,prog" alt="">
+                            src="p1.jpg" alt="">
 
                     </div>
                 </div>
@@ -408,7 +410,7 @@
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
-                            src="https://source.unsplash.com/200x250/?laptop" alt="">
+                            src="p4.jpg" alt="">
 
                     </div>
                 </div>
@@ -426,7 +428,7 @@
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250"
-                            src="https://source.unsplash.com/200x250/?tech" alt="">
+                            src="p2.jpg" alt="">
 
                     </div>
                 </div>
