fixed Topics in navbar

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                             Topics
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="https://en.wikipedia.org/wiki/Technology"
-                                    target="_blank">Technology</a></li>
-                            <li><a class="dropdown-item" href="#">Web Development</a></li>
+                            <li><a class="dropdown-item" href="/Website/enroll.html"
+                                    target="_blank">Subscription</a></li>
+                            <!-- <li><a class="dropdown-item" href="#">Web Development</a></li> -->
+                            <li><a class="dropdown-item" href="/Website/contact.html">Support</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Support</a></li>
-                            <li><a class="dropdown-item" href="#">Write for Us</a></li>
+                            <li><a class="dropdown-item" href="/Website/contact.html">Write for Us</a></li>
                         </ul>
                     </li>
                 </ul>
