all section topics dropdown  will be fixed

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,10 @@
                         Topics
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Technology</a>
-                        <a class="dropdown-item" href="#">Web Development</a>
+                        <a class="dropdown-item" href="/Website/enroll.html">Subscription</a>
+                        <a class="dropdown-item" href="/Website/contact.html">Support</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Support</a>
-                        <a class="dropdown-item" href="#">Write for us</a>
+                        <a class="dropdown-item" href="/Website/contact.html">Write for us</a>
                     </div>
                 </li>
 
