--- a/index.html
+++ b/index.html
@@ -640,10 +640,10 @@
 
 
     <!-- Footer  -->
-    <div class="container collapse-sm ">
+    <div class="container">
         <footer class="py-5">
             <div class="row">
-                <div class="col-2">
+                <div class="col-6 col-md-2 mb-3">
                     <h5>Features</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">API</a></li>
@@ -652,7 +652,7 @@
                     </ul>
                 </div>
 
-                <div class="col-2">
+                <div class="col-6 col-md-2 mb-3">
                     <h5>Recommend</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Shop</a></li>
@@ -661,7 +661,7 @@
                     </ul>
                 </div>
 
-                <div class="col-2">
+                <div class="col-6 col-md-2 mb-3">
                     <h5>More</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
@@ -670,7 +670,7 @@
                     </ul>
                 </div>
 
-                <div class="col-4 offset-1">
+                <div class="col-md-5 offset-md-1 mb-3">
                     <form>
                         <h5>Subscribe to our newsletter</h5>
                         <p>Monthly digest of whats new and exciting from us.</p>
@@ -683,7 +683,7 @@
                 </div>
             </div>
 
-            <div class="d-flex justify-content-between py-4 my-4 border-top">
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
                 <p>© 2022 Company, Inc. All rights reserved.</p>
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3"><a class="link-dark" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
